Version 4.22 - 26 April 2011, by Per Øyvind Karlsen

- add support for nofdigests
- fix getting expected NVRA tag
- fix possible breakage when trying to load non-existant dependency flags
- fix provide flags not being loaded for headers read from rpm files

Version 4.21 - 23 April 2011, by Per Øyvind Karlsen

- fix a missing null terminator at end of @info@ string regression, causing
  random data to be appended at end of line

Version 4.20 - 22 April 2011, by Per Øyvind Karlsen

- merge in some DUDF changes from Alexandre Lissy
- add disttag & distepoch to @info@ in synthesis for easier parsing

Version 4.19 - 31 March 2011, by Per Øyvind Karlsen

- fix regression caused by memleak fix in previous release

Version 4.18 - 31 March 2011, by Per Øyvind Karlsen

- fix memleak in URPM::Pkg->evr()
- drop URPM::DB::close() and teardown properly by calling rpmcliFini() at exit
- fix odd i586 specific bug triggering segfault with -fstack-protector (#61690)

Version 4.17 - 30 March 2011, by Per Øyvind Karlsen

- fix conversion to older hash database format resulting in "missing" package
  from rpmdb

Version 4.16 - 29 March 2011, by Per Øyvind Karlsen

- add setInternalVariable() for changing various variables for debugging etc.
  within rpmlib
- support translate_message & raw_message options for URPM::Transaction->check()
- support versioned suggests

Version 4.15 - 19 Feb 2011, by Per Øyvind Karlsen

- fix segfault when there's no provides in synthesis (ie. with src.rpm)

Version 4.14 - 14 Feb 2011, by Per Øyvind Karlsen

- use specified arch for packages to be removed, don't strip it away and
  remove every package if having multiple packages with same name and
  different arch
- fix segfault when trying to open non-existing synthesis

Version 4.13 - 24 Jan 2011, by Per Øyvind Karlsen

- move disttag/distepoch pattern matching breakage hack into rpm
- fix fetching EVR from rpm headers
- fix evr extraction which broke for some packages with i586 synthesis